# Kodo-tracker

./: .gitignore  Cargo.toml  README.md  activities.json
kodo-cli/: Cargo.toml
kodo-cli/src/: cli_actions.rs  git.rs  main.rs  tui.rs
kodo-cli/src/tui/: dashboard.rs  input.rs  mod.rs  table.rs  widgets.rs
kodo-core/: Cargo.toml
kodo-core/src/: activity.rs  lib.rs
kodo-core/tests/: activity_json.rs
