[package]
name = "kodo-cli"
version = "0.1.0"
edition = "2024"
authors = ["Mitali Sinha"]
description = "Kodō CLI — small CLI for recording and exporting dev activity (binary)."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/kodo"

[dependencies]
clap = { version = "4.3", features = ["derive"] }  
anyhow = "1.0"                                     
kodo-core = { path = "../kodo-core" }               