[package]
name = "kodo-cli"
version = "0.1.0"
edition = "2024"
authors = ["Mitali Sinha"]
description = "Kodō CLI — small CLI for recording and exporting dev activity (binary)."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Kayleexx/kodo-tracker"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
kodo-core = { path = "../kodo-core" }
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
uuid = "1.18.1"
git2 = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
