[package]
name = "kodo-core"
version = "0.1.0"
edition = "2024"
authors = ["Mitali Sinha"]
description = "Kodō core: a library for tracking developer activity (core domain)."
license = "MIT"  # common dual-license for Rust libraries
readme = "README.md"
repository = "https://github.com/Kayleexx/kodo"
homepage = "https://github.com/Kayleexx/kodo"
keywords = ["productivity", "cli", "developer-tools", "tracking"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://docs.rs/kodo-core"  
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*", "examples/**"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"                                   
anyhow = "1.0"                                        

